--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
     server_name localhost;
 
+    client_max_body_size 100M;
+
     root /usr/share/nginx/html;
     index index.html;
 
@@ -19,5 +21,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_cache_bypass $http_upgrade;
+
+        client_max_body_size 100M;
+
     }
 }
