--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,77 +1,57 @@
+version: '3.8'
+
 services:
-  # PostgreSQL Database
   postgres:
     image: postgres:15-alpine
     container_name: cloud_storage_db
+    restart: always
     environment:
       POSTGRES_DB: cloud_storage
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-    ports:
-      - "5432:5432"
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-password}
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./database.sql:/docker-entrypoint-initdb.d/init.sql
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  # MinIO Object Storage
-  minio:
-    image: minio/minio:latest
-    container_name: cloud_storage_minio
-    command: server /data --console-address ":9001"
-    environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
     ports:
-      - "9000:9000"
-      - "9001:9001"
-    volumes:
-      - minio_data:/data
-    healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
-      interval: 30s
-      timeout: 20s
-      retries: 3
+      - "5432:5432"
 
-  # Flask Backend
   backend:
     build: .
     container_name: cloud_storage_backend
+    restart: always
     depends_on:
-      postgres:
-        condition: service_healthy
-      minio:
-        condition: service_healthy
+      - postgres
     environment:
-      DATABASE_URL: postgresql://postgres:password@postgres:5432/cloud_storage
-      MINIO_ENDPOINT: minio:9000
-      MINIO_ACCESS_KEY: minioadmin
-      MINIO_SECRET_KEY: minioadmin
-      MINIO_BUCKET: user-files
-      JWT_SECRET: your_jwt_secret_key
-      STRIPE_SECRET_KEY: your_stripe_secret_key
+      # Database
+      DATABASE_URL: postgresql://postgres:${DB_PASSWORD:-password}@postgres:5432/cloud_storage
+
+      # 🔥 MinIO Configuration cho AWS S3
+      MINIO_ENDPOINT: s3.${AWS_REGION:-ap-southeast-1}.amazonaws.com
+      MINIO_ACCESS_KEY: ${AWS_ACCESS_KEY_ID}
+      MINIO_SECRET_KEY: ${AWS_SECRET_ACCESS_KEY}
+      MINIO_BUCKET: ${S3_BUCKET_NAME}
+      MINIO_SECURE: 'True'  # 🔥 Quan trọng: S3 luôn dùng HTTPS
+      AWS_REGION: ${AWS_REGION:-ap-southeast-1}
+
+      # App Config
+      JWT_SECRET: ${JWT_SECRET}
+      FLASK_ENV: production
     ports:
       - "5000:5000"
-    volumes:
-      - ./app.py:/app/app.py
-    restart: unless-stopped
+    command: gunicorn --bind 0.0.0.0:5000 --workers 2 --timeout 120 app:app
 
-  frontend:
+  nginx:
     image: nginx:alpine
-    container_name: cloud_storage_frontend
+    container_name: cloud_storage_nginx
+    restart: always
     depends_on:
       - backend
     ports:
-      - "8080:80"
+      - "80:80"
     volumes:
       - ./index.html:/usr/share/nginx/html/index.html:ro
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    restart: unless-stopped
+    command: ["nginx", "-g", "daemon off;"]
 
 volumes:
   postgres_data:
-  minio_data:
